--- a/notebooks/01-mm-titanic.ipynb
+++ b/notebooks/01-mm-titanic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "h:\\My Drive\\My Personal Space\\1_Projects\\PWrArtificialIntelligenceForEngineers\\titanic\\.venv\\lib\\site-packages\\sklearn\\datasets\\_openml.py:932: FutureWarning: The default value of `parser` will change from `'liac-arff'` to `'auto'` in 1.4. You can set `parser='auto'` to silence this warning. Therefore, an `ImportError` will be raised from 1.4 if the dataset is dense and pandas is not installed. Note that the pandas parser may return different data types. See the Notes Section in fetch_openml's API doc for details.\n",
+      "  warn(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -71,30 +79,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>Allen, Miss. Elisabeth Walton</td>\n",
        "      <td>female</td>\n",
        "      <td>29.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>24160</td>\n",
        "      <td>211.3375</td>\n",
        "      <td>B5</td>\n",
        "      <td>S</td>\n",
        "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>St Louis, MO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>Allison, Master. Hudson Trevor</td>\n",
        "      <td>male</td>\n",
        "      <td>0.9167</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>113781</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>C22 C26</td>\n",
@@ -105,52 +113,52 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Allison, Miss. Helen Loraine</td>\n",
        "      <td>female</td>\n",
        "      <td>2.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>113781</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Allison, Mr. Hudson Joshua Creighton</td>\n",
        "      <td>male</td>\n",
        "      <td>30.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>113781</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>135.0</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Allison, Mrs. Hudson J C (Bessie Waldo Daniels)</td>\n",
        "      <td>female</td>\n",
        "      <td>25.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>113781</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
@@ -160,18 +168,18 @@
       ],
       "text/plain": [
        "   pclass survived                                             name     sex  \\\n",
-       "0       1        1                    Allen, Miss. Elisabeth Walton  female   \n",
-       "1       1        1                   Allison, Master. Hudson Trevor    male   \n",
-       "2       1        0                     Allison, Miss. Helen Loraine  female   \n",
-       "3       1        0             Allison, Mr. Hudson Joshua Creighton    male   \n",
-       "4       1        0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
+       "0     1.0        1                    Allen, Miss. Elisabeth Walton  female   \n",
+       "1     1.0        1                   Allison, Master. Hudson Trevor    male   \n",
+       "2     1.0        0                     Allison, Miss. Helen Loraine  female   \n",
+       "3     1.0        0             Allison, Mr. Hudson Joshua Creighton    male   \n",
+       "4     1.0        0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
        "\n",
-       "       age  sibsp  parch  ticket      fare    cabin embarked boat   body  \\\n",
-       "0  29.0000      0      0   24160  211.3375       B5        S    2    NaN   \n",
-       "1   0.9167      1      2  113781  151.5500  C22 C26        S   11    NaN   \n",
-       "2   2.0000      1      2  113781  151.5500  C22 C26        S  NaN    NaN   \n",
-       "3  30.0000      1      2  113781  151.5500  C22 C26        S  NaN  135.0   \n",
-       "4  25.0000      1      2  113781  151.5500  C22 C26        S  NaN    NaN   \n",
+       "       age  sibsp  parch  ticket      fare    cabin embarked  boat   body  \\\n",
+       "0  29.0000    0.0    0.0   24160  211.3375       B5        S     2   None   \n",
+       "1   0.9167    1.0    2.0  113781  151.5500  C22 C26        S    11    NaN   \n",
+       "2   2.0000    1.0    2.0  113781  151.5500  C22 C26        S  None    NaN   \n",
+       "3  30.0000    1.0    2.0  113781  151.5500  C22 C26        S  None  135.0   \n",
+       "4  25.0000    1.0    2.0  113781  151.5500  C22 C26        S  None    NaN   \n",
        "\n",
        "                         home.dest  \n",
        "0                     St Louis, MO  \n",
@@ -181,7 +189,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,21 +219,21 @@
       "Data columns (total 14 columns):\n",
       " #   Column     Non-Null Count  Dtype   \n",
       "---  ------     --------------  -----   \n",
-      " 0   pclass     1309 non-null   int64   \n",
+      " 0   pclass     1309 non-null   float64 \n",
       " 1   survived   1309 non-null   category\n",
       " 2   name       1309 non-null   object  \n",
       " 3   sex        1309 non-null   category\n",
       " 4   age        1046 non-null   float64 \n",
-      " 5   sibsp      1309 non-null   int64   \n",
-      " 6   parch      1309 non-null   int64   \n",
+      " 5   sibsp      1309 non-null   float64 \n",
+      " 6   parch      1309 non-null   float64 \n",
       " 7   ticket     1309 non-null   object  \n",
       " 8   fare       1308 non-null   float64 \n",
       " 9   cabin      295 non-null    object  \n",
       " 10  embarked   1307 non-null   category\n",
       " 11  boat       486 non-null    object  \n",
-      " 12  body       121 non-null    float64 \n",
+      " 12  body       121 non-null    object  \n",
       " 13  home.dest  745 non-null    object  \n",
-      "dtypes: category(3), float64(3), int64(3), object(5)\n",
+      "dtypes: category(3), float64(5), object(6)\n",
       "memory usage: 116.8+ KB\n"
      ]
     }
@@ -237,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -274,56 +282,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>29.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>211.3375</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.9167</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>30.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>25.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>151.5500</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -333,14 +341,14 @@
       ],
       "text/plain": [
        "   pclass survived  sex      age  sibsp  parch      fare  embarked\n",
-       "0       1        1    0  29.0000      0      0  211.3375         2\n",
-       "1       1        1    1   0.9167      1      2  151.5500         2\n",
-       "2       1        0    0   2.0000      1      2  151.5500         2\n",
-       "3       1        0    1  30.0000      1      2  151.5500         2\n",
-       "4       1        0    0  25.0000      1      2  151.5500         2"
+       "0     1.0        1    0  29.0000    0.0    0.0  211.3375         2\n",
+       "1     1.0        1    1   0.9167    1.0    2.0  151.5500         2\n",
+       "2     1.0        0    0   2.0000    1.0    2.0  151.5500         2\n",
+       "3     1.0        0    1  30.0000    1.0    2.0  151.5500         2\n",
+       "4     1.0        0    0  25.0000    1.0    2.0  151.5500         2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -374,20 +382,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1043 entries, 0 to 1308\n",
+      "Int64Index: 1043 entries, 0 to 1308\n",
       "Data columns (total 8 columns):\n",
       " #   Column    Non-Null Count  Dtype   \n",
       "---  ------    --------------  -----   \n",
-      " 0   pclass    1043 non-null   int64   \n",
+      " 0   pclass    1043 non-null   float64 \n",
       " 1   survived  1043 non-null   category\n",
-      " 2   sex       1043 non-null   int64   \n",
+      " 2   sex       1043 non-null   int32   \n",
       " 3   age       1043 non-null   float64 \n",
-      " 4   sibsp     1043 non-null   int64   \n",
-      " 5   parch     1043 non-null   int64   \n",
+      " 4   sibsp     1043 non-null   float64 \n",
+      " 5   parch     1043 non-null   float64 \n",
       " 6   fare      1043 non-null   float64 \n",
-      " 7   embarked  1043 non-null   int64   \n",
-      "dtypes: category(1), float64(2), int64(5)\n",
-      "memory usage: 66.3 KB\n"
+      " 7   embarked  1043 non-null   int32   \n",
+      "dtypes: category(1), float64(5), int32(2)\n",
+      "memory usage: 58.2 KB\n"
      ]
     }
    ],
@@ -397,17 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "survived\n",
       "0    59.252157\n",
       "1    40.747843\n",
-      "Name: proportion, dtype: float64\n"
+      "Name: survived, dtype: float64\n"
      ]
     }
    ],
@@ -426,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -434,11 +441,11 @@
      "output_type": "stream",
      "text": [
       "   pclass  sex      age  sibsp  parch      fare  embarked\n",
-      "0       1    0  29.0000      0      0  211.3375         2\n",
-      "1       1    1   0.9167      1      2  151.5500         2\n",
-      "2       1    0   2.0000      1      2  151.5500         2\n",
-      "3       1    1  30.0000      1      2  151.5500         2\n",
-      "4       1    0  25.0000      1      2  151.5500         2\n",
+      "0     1.0    0  29.0000    0.0    0.0  211.3375         2\n",
+      "1     1.0    1   0.9167    1.0    2.0  151.5500         2\n",
+      "2     1.0    0   2.0000    1.0    2.0  151.5500         2\n",
+      "3     1.0    1  30.0000    1.0    2.0  151.5500         2\n",
+      "4     1.0    0  25.0000    1.0    2.0  151.5500         2\n",
       "0    1\n",
       "1    1\n",
       "2    0\n",
@@ -461,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,9 +480,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "h:\\My Drive\\My Personal Space\\1_Projects\\PWrArtificialIntelligenceForEngineers\\titanic\\.venv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -484,20 +505,6 @@
       "LogReg: Testing Accuracy: 0.784688995215311\n",
       "RandomForest: Training Accuracy: 0.9844124700239808\n",
       "RandomForest: Testing Accuracy: 0.784688995215311\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Anaconda\\envs\\aieng_py310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
@@ -527,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aieng_py310",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -541,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
